src/test/ui/rfc-2632-const-trait-impl/trait-where-clause.stderr
error[E0277]: the trait bound `T: ~const Bar` is not satisfied
  --> $DIR/trait-where-clause.rs:13:5
   |
LL |     T::b();
   |     ^^^^ the trait `~const Bar` is not implemented for `T`
   |
note: the trait `Bar` is implemented for `T`, but that implementation is not `const`
  --> $DIR/trait-where-clause.rs:13:5
   |
LL |     T::b();
   |     ^^^^
note: required by a bound in `Foo::b`
  --> $DIR/trait-where-clause.rs:7:24
   |
LL |     fn b() where Self: ~const Bar;
   |                        ^^^^^^^^^^ required by this bound in `Foo::b`
help: consider further restricting this bound
   |
LL | const fn test1<T: ~const Foo + Bar + ~const Bar>() {
   |                                    ++++++++++++

error[E0277]: the trait bound `T: ~const Bar` is not satisfied
  --> $DIR/trait-where-clause.rs:15:12
   |
LL |     T::c::<T>();
   |            ^ the trait `~const Bar` is not implemented for `T`
   |
note: the trait `Bar` is implemented for `T`, but that implementation is not `const`
  --> $DIR/trait-where-clause.rs:15:12
   |
LL |     T::c::<T>();
   |            ^
note: required by a bound in `Foo::c`
  --> $DIR/trait-where-clause.rs:8:13
   |
LL |     fn c<T: ~const Bar>();
   |             ^^^^^^^^^^ required by this bound in `Foo::c`
help: consider further restricting this bound
   |
LL | const fn test1<T: ~const Foo + Bar + ~const Bar>() {
   |                                    ++++++++++++

error[E0277]: the trait bound `T: Bar` is not satisfied
  --> $DIR/trait-where-clause.rs:27:5
   |
LL |     T::b();
   |     ^^^^ the trait `Bar` is not implemented for `T`
   |
note: required by a bound in `Foo::b`
  --> $DIR/trait-where-clause.rs:7:24
   |
LL |     fn b() where Self: ~const Bar;
   |                        ^^^^^^^^^^ required by this bound in `Foo::b`
help: consider further restricting this bound
   |
LL | fn test3<T: Foo + Bar>() {
   |                 +++++

error[E0277]: the trait bound `T: Bar` is not satisfied
  --> $DIR/trait-where-clause.rs:29:12
   |
LL |     T::c::<T>();
   |            ^ the trait `Bar` is not implemented for `T`
   |
note: required by a bound in `Foo::c`
  --> $DIR/trait-where-clause.rs:8:13
   |
LL |     fn c<T: ~const Bar>();
   |             ^^^^^^^^^^ required by this bound in `Foo::c`
help: consider further restricting this bound
   |
LL | fn test3<T: Foo + Bar>() {
   |                 +++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
